end about pages

--- a/index.html
+++ b/index.html
@@ -159,30 +159,32 @@
 
                 <div class="col-md-12 col-xs-12 col-lg-12">
 
-                  <h4> Entraînement rapide et intensif </h4>
+                    <h4> Entraînement rapide et intensif </h4>
 
-                  <p>Lors de votre séance de coaching , tous les muscles sont sollicités, aussi bien ceux à fibres rapides que ceux à fibres lentes. Le muscle va travailler à 100% de sa capacité grâce aux vibrations. Grâce à la Power Plate, on gagne rapidement en force maximale, force explosive, vitesse et endurance. En seulement 10 minutes, vous obtenez le même résultat que lors d'un entraînement de musculation traditionnel long et fastidieux.
-Les coachs sportifs, vous attendent à Lille et la Madeleine pour des entraînements toniques et amincissants !
-</p>
+                    <p>Lors de votre séance de coaching , tous les muscles sont sollicités, aussi bien ceux à fibres rapides que ceux à fibres lentes. Le muscle va travailler à 100% de sa capacité grâce aux vibrations. Grâce à la Power Plate, on gagne rapidement
+                        en force maximale, force explosive, vitesse et endurance. En seulement 10 minutes, vous obtenez le même résultat que lors d'un entraînement de musculation traditionnel long et fastidieux. Les coachs sportifs, vous attendent à Lille
+                        et la Madeleine pour des entraînements toniques et amincissants !
+                    </p>
 
-                  <h4>Brûlage des graisses</h4>
+                    <h4>Brûlage des graisses</h4>
 
-                  <p>L'entraînement entraîne une augmentation du métabolisme de base, de la dépense calorique journalière, et donc une perte de masse grasse.
-Combattez facilement la cellulite grâce à nos coachs privés !</p>
+                    <p>L'entraînement entraîne une augmentation du métabolisme de base, de la dépense calorique journalière, et donc une perte de masse grasse. Combattez facilement la cellulite grâce à nos coachs privés !</p>
 
-                  <h4>Circulation sanguine</h4>
+                    <h4>Circulation sanguine</h4>
 
-                  <p>Grâce à l'entraînement e muscle va pomper le sang de 30 à 50 fois par seconde. L'oxygène est ainsi amené beaucoup plus rapidement dans le muscle et les déchets métaboliques comme le gaz carbonique sont rapidement évacués.
-</p>
+                    <p>Grâce à l'entraînement e muscle va pomper le sang de 30 à 50 fois par seconde. L'oxygène est ainsi amené beaucoup plus rapidement dans le muscle et les déchets métaboliques comme le gaz carbonique sont rapidement évacués.
+                    </p>
 
-                  <h4>Coordination</h4>
+                    <h4>Coordination</h4>
 
-                  <p>L'entraînementstimule les récepteurs musculaires, tendineux et articulaires du corps améliorant ainsi la coordination inter et intramusculaire. Réactivité, équilibre et coordination sont améliorés favorisant ainsi la performance sportive. Votre coach sportif individuel vous conseillera tout au long de vos séances de sport.
-</p>
+                    <p>L'entraînementstimule les récepteurs musculaires, tendineux et articulaires du corps améliorant ainsi la coordination inter et intramusculaire. Réactivité, équilibre et coordination sont améliorés favorisant ainsi la performance sportive.
+                        Votre coach sportif individuel vous conseillera tout au long de vos séances de sport.
+                    </p>
 
-                <h4> Flexibilité et étirement </h4>
+                    <h4> Flexibilité et étirement </h4>
 
-                <p>Les vibrations libèrent les structures passives des articulations. L'afflux sanguin plus important et le réchauffement de la température au niveau musculaire favorisent les capacités d'étirement et d'élasticité du muscle. Votre coach sportif vous conseillera pour faire des étirements en toute sécurité.</p>
+                    <p>Les vibrations libèrent les structures passives des articulations. L'afflux sanguin plus important et le réchauffement de la température au niveau musculaire favorisent les capacités d'étirement et d'élasticité du muscle. Votre coach
+                        sportif vous conseillera pour faire des étirements en toute sécurité.</p>
 
                 </div>
 
@@ -197,43 +199,47 @@ Combattez facilement la cellulite grâce à nos coachs privés !</p>
     <!-- footer -->
     <footer>
 
-      <!-- first list -->
-          <!-- <div class="firstl"> -->
-
-
-
-                <ul class="liste">
-                  <h5> entreprise </h5>
-                  <li> <a href="#"> google </a></li>
-                  <li> <a href="#"> azerty </a></li>
-                  <li> <a href="#"> qwerty </a></li>
-                </ul>
-
-          <!-- </div> -->
-          <!-- end first list   -->
-
-
-
-              <ul>
-                <h5>nous contacter</h5>
-                <li> <a href="#"> <img src="img/png/facebook.png" alt="facebook" /> </a> </li>
-                <li> <a href="#"> <img src="img/png/twitter.png" alt="twitter"/> </a> </li>
-
-              </ul>
+        <!-- first list -->
 
 
 
 
+        <ul class="liste">
+            <h5> entreprise </h5>
+            <li> <a href="#"> google </a></li>
+            <li> <a href="#"> azerty </a></li>
+            <li> <a href="#"> qwerty </a></li>
+        </ul>
+
+        <!-- </div> -->
+        <!-- end first list   -->
 
 
-                <ul class="liste1">
-                  <h5> Trouvez votre coach sportif en France</h5>
-                  <li> <a href="#"> Lille </a></li>
-                  <li> <a href="#"> Paris </a></li>
-                  <li> <a href="#"> Marseille </a></li>
-                </ul>
 
-      <!-- end third list -->
+        <ul>
+            <h5>nous contacter</h5>
+            <li>
+                <a href="#"> <img src="img/png/facebook.png" alt="facebook" /> </a>
+            </li>
+            <li>
+                <a href="#"> <img src="img/png/twitter.png" alt="twitter" /> </a>
+            </li>
+
+        </ul>
+
+
+
+
+
+
+        <ul class="liste1">
+            <h5> Trouvez votre coach sportif en France</h5>
+            <li> <a href="#"> Lille </a></li>
+            <li> <a href="#"> Paris </a></li>
+            <li> <a href="#"> Marseille </a></li>
+        </ul>
+
+        <!-- end third list -->
 
     </footer>
     <!-- end footer -->
