--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
     <section>
       <h1> nos coach </h1>
 
-      <div class="container">
+      <div class="container coach">
 
           <!-- first coach -->
           <div class="row">
@@ -99,7 +99,7 @@
               <div class="col-md-6 col-xs-12 col-lg-6">
 
                 <h3> presentation </h3>
-                  <p> ce coach particuliérement assidu s'occupe principalement des personnes qui ont vraiment besoin de perdre du poids             trés investit dans son travail c'est le coach parfait si vous voulez perdre beaucoup de poids en un minimum de temps
+                  <p class="texte"> ce coach particuliérement assidu s'occupe principalement des personnes qui ont vraiment besoin de perdre du poids             trés investit dans son travail c'est le coach parfait si vous voulez perdre beaucoup de poids en un minimum de temps
                   (nt: c'est exercice sont trés dur a suivre et pas conséquant conseiller que au personne vraiment motivé) </p>
 
 
