--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <script src="js/bootstrap.js"></script>
-    <title>Home</title>
+    <title>Coach</title>
     <link rel="icon" type="image/png" href="img/favicon.png">
 
 
@@ -35,7 +35,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Coach</a>
+                    <a class="navbar-brand" href="index.html">Coach</a>
                 </div>
 
                 <div class="container">
